[SVN] r897 Cinema - Heroku in /Projects/Cinema/ [ADD] Accordion to planner results [FIX] Accordion logic by upgrading plugin [ADD] Some spacing to performances table

--- a/Heroku/static/styles/planner-angular.css
+++ b/Heroku/static/styles/planner-angular.css
@@ -92,8 +92,17 @@ a {
 	color: red;
 }
 
-table, tr, td, th {
+#performances table,
+#performances tr,
+#performances td,
+#performances th {
 	border: 1px solid #CCCCCC;
+}
+#performances td.cinema {
+	padding: 2px 6px;
+}
+#performances table {
+	margin-bottom: 6px;
 }
 
 
